:zap: Improve phonetic spelling rules, improve "How to use menu"

--- a/views/how_table.ejs
+++ b/views/how_table.ejs
@@ -18,22 +18,17 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td class="input">N</td>
+                    <td class="input">gn</td>
                     <td><big><span title="Representation in the International Phonetic Alphabet (IPA)" class="IPA"><a href="http://en.wikipedia.org/wiki/Palatal_nasal#Palatal_or_alveolo-palatal" title="Palatal nasal">ɲ</a></span></big></td>
                     <td style="text-align: left;">ga<b>gn</b>er, champa<b>gn</b>e</td>
                 </tr>
                 <tr>
-                    <td class="input">r</td>
-                    <td><big><span title="Representation in the International Phonetic Alphabet (IPA)" class="IPA"><a href="http://en.wikipedia.org/wiki/Voiced_uvular_fricative" title="Voiced uvular fricative">ʁ</a></span></big></td>
-                    <td style="text-align: left;"><b>r</b>ega<b>r</b>der, nôt<b>r</b>e<sup id="cite_ref-1" class="reference"><a href="#cite_note-1">[1]</a></sup></td>
-                </tr>
-                <tr>
-                    <td class="input">S</td>
+                    <td class="input">ch <span style="color: black;">or</span> sh</td>
                     <td><big><span title="Representation in the International Phonetic Alphabet (IPA)" class="IPA"><a href="http://en.wikipedia.org/wiki/Voiceless_palato-alveolar_sibilant" title="Voiceless palato-alveolar sibilant">ʃ</a></span></big></td>
                     <td style="text-align: left;"><b>ch</b>ance</td>
                 </tr>
                 <tr>
-                    <td class="input">j</td>
+                    <td class="input">j <span style="color: black;">or</span> g</td>
                     <td><big><span title="Representation in the International Phonetic Alphabet (IPA)" class="IPA"><a href="http://en.wikipedia.org/wiki/Voiced_palato-alveolar_sibilant" title="Voiced palato-alveolar sibilant">ʒ</a></span></big></td>
                     <td style="text-align: left;"><b>j</b>amais, visa<b>g</b>e</td>
                 </tr>
@@ -66,22 +61,22 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td class="input">A</td>
+                    <td class="input">an <span style="color: black;">or</span> en</td>
                     <td><big><span title="Representation in the International Phonetic Alphabet (IPA)" class="IPA"><a href="http://en.wikipedia.org/wiki/Nasal_vowel" title="Nasal vowel">ɑ̃</a></span></big></td>
                     <td style="text-align: left;">s<b>an</b>s, ch<b>am</b>p, v<b>en</b>t, t<b>em</b>ps, J<b>ean</b>, t<b>aon</b></td>
                 </tr>
                 <tr>
-                    <td class="input">U</td>
+                    <td class="input">in <span style="color: black;">or</span> un</td>
                     <td><big><span title="Representation in the International Phonetic Alphabet (IPA)" class="IPA"><a href="http://en.wikipedia.org/wiki/Nasal_vowel" title="Nasal vowel">ɛ̃</a></span></big></td>
                     <td style="text-align: left;">v<b>in</b>, <b>im</b>pair, p<b>ain</b>, d<b>aim</b>, pl<b>ein</b>, R<b>eim</b>s, s<b>yn</b>thèse, s<b>ym</b>pa, bi<b>en</b></td>
                 </tr>
                 <tr>
-                    <td class="input">U</td>
+                    <td class="input">in <span style="color: black;">or</span> un</td>
                     <td><big><span title="Representation in the International Phonetic Alphabet (IPA)" class="IPA"><a href="http://en.wikipedia.org/wiki/Nasal_vowel" title="Nasal vowel">œ̃</a></span></big></td>
                     <td style="text-align: left;"><b>un</b>, parf<b>um</b><sup id="cite_ref-merger_5-2" class="reference"><a href="#cite_note-merger-5">[5]</a></sup></td>
                 </tr>
                 <tr>
-                    <td class="input">O</td>
+                    <td class="input">on</td>
                     <td><big><span title="Representation in the International Phonetic Alphabet (IPA)" class="IPA"><a href="http://en.wikipedia.org/wiki/Nasal_vowel" title="Nasal vowel">ɔ̃</a></span></big></td>
                     <td style="text-align: left;">s<b>on</b>, n<b>om</b></td>
                 </tr>
@@ -89,17 +84,17 @@
                     <th colspan="3"><a href="http://en.wikipedia.org/wiki/Vowel" title="Vowel">Oral Vowels</a></th>
                 </tr>
                 <tr>
-                    <td class="input">e <span style="color: black;">or</span> é</td>
+                    <td class="input">e</td>
                     <td><big><span title="Representation in the International Phonetic Alphabet (IPA)" class="IPA"><a href="http://en.wikipedia.org/wiki/Close-mid_front_unrounded_vowel" title="Close-mid front unrounded vowel">e</a></span></big></td>
                     <td style="text-align: left;">cl<b>é</b>, l<b>e</b>s, ch<b>e</b>z, all<b>e</b>r, pi<b>e</b>d, journ<b>ée</b></td>
                 </tr>
                 <tr>
-                    <td class="input">e <span style="color: black;">or</span> è</td>
+                    <td class="input">e</td>
                     <td><big><span title="Representation in the International Phonetic Alphabet (IPA)" class="IPA"><a href="http://en.wikipedia.org/wiki/Open-mid_front_unrounded_vowel" title="Open-mid front unrounded vowel">ɛ</a></span></big></td>
                     <td style="text-align: left;">b<b>aie</b>, f<b>ai</b>te, m<b>e</b>ttre, r<b>e</b>nne, cr<b>è</b>me, p<b>ei</b>ne</td>
                 </tr>
                 <tr>
-                    <td class="input">e  <span style="color: black;">or</span> è</td>
+                    <td class="input">e</td>
                     <td><big><span title="Representation in the International Phonetic Alphabet (IPA)" class="IPA"><a href="http://en.wikipedia.org/wiki/Open-mid_front_unrounded_vowel" title="Open-mid front unrounded vowel">ɛː</a></span></big></td>
                     <td style="text-align: left;">f<b>ê</b>te, m<b>aî</b>tre, m<b>è</b>tre, r<b>ei</b>ne, r<b>eî</b>tre, c<b>ai</b>sse, pr<b>e</b>sse<sup id="cite_ref-merger_5-1" class="reference"><a href="#cite_note-merger-5">[5]</a></sup></td>
                 </tr>
@@ -129,7 +124,7 @@
                     <td style="text-align: left;">s<b>o</b>rt, minim<b>u</b>m</td>
                 </tr>
                 <tr>
-                    <td class="input">u <span style="color: black;">or</span> y</td>
+                    <td class="input">u</td>
                     <td><big><span title="Representation in the International Phonetic Alphabet (IPA)" class="IPA"><a href="http://en.wikipedia.org/wiki/Close_front_rounded_vowel" title="Close front rounded vowel">y</a></span></big></td>
                     <td style="text-align: left;">t<b>u</b>, s<b>û</b>r, r<b>ue</b></td>
                 </tr>
