--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,10 +43,10 @@
       </div>
       <div class="accordion-group">
       <div class="collapse well" id="how" style="font-size: 17px">
-          Input any french word the way you hear it, following the rules in the table bellow.<br>
-          E.g. <span>bOjur</span> => Bonjour, <span>ASAte</span> => Enchanté <br>
-          You can also use wildcard "*" for phonems you don't know.<br>
-          E.g. <span>m*rsi</span> will find the word "merci".
+          Input any french word the way you hear it (the spelling can be wrong !) and press "Enter" <br>
+          E.g. <span>mersi</span> => merci, <span>anchentè</span> => Enchanté, <br> <span>fonetik</span> => phonétique, <span>ritm</span> => rythme <br>
+          You can also use wildcard "*" for sounds you don't know.<br>
+          E.g. <span>m*rci</span> will find the word "merci".
           <% include how_table.ejs %>
       </div>
       <div class="collapse well" id="what">
